tests/fixtures/invalid/pow_list_int_int.py
# Cannot call pow() with List[int], Int, Int
x = pow([1, 2, 3], 1, 1)
